<resources>
    <string name="app_name">PokemonsProject</string>
    <string name="caterpie">Caterpie</string>
    <string name="charmelion">Charmelion</string>
    <string name="bulbasaur">Bulbasaur</string>
    <string name="category">Category</string>
    <string name="abilities">Abilities</string>
    <string name="type">Type</string>
    <string name="value">value</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="name">Name</string>
</resources>